Changed hero background, improved about us page, and other minor edits

--- a/aboutus.html
+++ b/aboutus.html
@@ -3,20 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us</title>
+    <link rel="stylesheet" href="style.css">
+    <span class="outlined-text">
+        <title>Messiano’s Pizzeria - Menu</title>
+    </span>
 </head>
 <body>
-    <h1>A Little About Us:</h1>
-    <p>Hello, welcome to Messiano’s Pizzeria! We are striving to make the most high quality Italian style Pizzas in your local area! 
+    <header>
+        <a href="index.html">
+            <button class="card">
+                Home
+            </button>
+        </a>
+        <a href="menu.html">
+            <button class="card">
+                Menu
+            </button>
+        </a>
+        <a href="stores.html">
+            <button class="card">
+                Stores
+            </button>
+        </a>
+        <a href="aboutus.html">
+            <button class="card">
+                About
+            </button>
+        </a>
+    </header>
+
+    <section class="heading-section">
+        <h1 class="aboutus-title">A Little About Us:</h1>
+        <div>
+           <p class="aboutus-text" class="aboutus-text-size">Hello, welcome to Messiano’s Pizzeria! We are striving to make the most high quality Italian style Pizzas in your local area! 
 Before our shop opened back in 2025, our team has been going around a trip in Italy for the past 5 years (except 2020 due to the COVID-19 pandemic), and we loved the delicious food they have prepared and their culture in general too! We strive to offer this experience inside our local area to give the authentic feel of Italian Pizzas! 
 Our team had been wanting to give customers the feel of traditional Italian Pizzas. Therefore, our Pizzas are cooked in a traditional pizza oven to give a smoky flavour to our pizzas, prepared by Italian chefs, and are made according to the Italian traditions and rules. We made sure to respect Italians by avoid cutting Pasta and omit directly putting overly non-traditional ingredients, including chicken and pineapple, onto our Italian main dishes. If you would like food such as those, we have offered side dishes for you to enjoy them to cater your preferences. 
 </p>
-    <section>
-        <a href="index.html">
+        </div>
+    
+    <footer>
+        <a href="menu.html">
             <button class="card">
-                Exit page
+                Help
             </button>
         </a>
-    </section>
+        <a href="menu.html">
+            <button class="card">
+                Contact
+            </button>
+        </a>
+    </footer>
 </body>
 </html>
