--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     </span>
 </head>
 <body>
+    <!-- sticky header -->
     <header>
         <a href="index.html">
             <button class="card">
@@ -18,21 +19,6 @@
         <a href="menu.html">
             <button class="card">
                 Menu
-            </button>
-        </a>
-        <a href="menu.html">
-            <button class="card">
-                Deals
-            </button>
-        </a>
-        <a href="menu.html">
-            <button class="card">
-                Allergen
-            </button>
-        </a>
-        <a href="menu.html">
-            <button class="card">
-                Blog
             </button>
         </a>
         <a href="stores.html">
@@ -45,13 +31,10 @@
                 About
             </button>
         </a>
-        <a href="menu.html">
-            <button class="card">
-                Account
-            </button>
-        </a>
     </header>
 
+    <!-- filler -->
+    <section class="filler"></section>
     <section class="hero-image" alt="pizzeria kitchen">
         <h1 class="hero-text">
             ──── Messiano's Pizzeria ────
@@ -64,42 +47,15 @@
         </div>
         <div class="info">
             <h1>Welcome to the Pizzeria</h1>
-            <p>Hello, welcome to Messiano’s Pizzeria! Here, you can find a range of Pizzas and various other Italian inspired dishes at our place! You can either dine in, takeaway, or order and eat at home! We’ll deliver your items fast and safe! 
-Give us a call or find us in our local stores!</p>
+            <p class="home-paragraph-size">Hello, welcome to Messiano’s Pizzeria! Here, you can find a range of Pizzas and various other Italian inspired dishes at our place! In this website, you can find what to expect in our pizza shops when we open in early 2026!  At that time, this website will turn into an actual pizza ordering website. 
+Please stay tuned and we would appreciate your feedback!</p>
         </div>
     </section>
     <!-- two column design ending -->
-    <!-- three column design beginning -->
-    <section class="heading-section">
-        <h1>
-            ──── Order Now By ────
-        </h1>
-    </section>
-    <section class="three-column";>
-        <div>
-            <a href="menu.html" class="my-button">
-                <button class="card">
-                    Dine in
-                </button>
-            </a>
-        </div>
-        <div>
-            <a href="menu.html" class="my-button-2">
-                <button class="card">
-                    Pick up
-                </button>
-            </a>
-        </div>
-        <div>
-            <a href="menu.html" class="my-button-3">
-                <button class="card">
-                    Delivery
-                </button>
-            </a>
-        </div>
-     </section>
-<!-- three column design ending -->
+    <!-- filler -->
+    <section class="filler"></section>
 
+    <!-- sticky footer -->
     <footer>
         <a href="menu.html">
             <button class="card">
