--- a/menu.html
+++ b/menu.html
@@ -9,6 +9,7 @@
     </span>
 </head>
 <body>
+    <!-- sticky header -->
     <header>
         <a href="index.html">
             <button class="card">
@@ -18,21 +19,6 @@
         <a href="menu.html">
             <button class="card">
                 Menu
-            </button>
-        </a>
-        <a href="menu.html">
-            <button class="card">
-                Deals
-            </button>
-        </a>
-        <a href="menu.html">
-            <button class="card">
-                Allergen
-            </button>
-        </a>
-        <a href="menu.html">
-            <button class="card">
-                Blog
             </button>
         </a>
         <a href="stores.html">
@@ -45,48 +31,52 @@
                 About
             </button>
         </a>
-        <a href="menu.html">
-            <button class="card">
-                Account
-            </button>
-        </a>
     </header>
+
+    <!-- filler -->
+    <section class="filler"></section>
 
     <section class="hero-background">
         <h1 class="hero-text-menu">
-            Food Menu
+            ──── Food Menu Showcase ────
         </h1>
     </section>
     <section class="heading-section">
         <h2 class="heading-text">
-            Pizza
+            ─ Pizza ─
         </h2>
     </section>
     <!-- three column design beginning -->
     <section class="three-column-menu">
         <div>
             <img src="./Pizza Images/Pepperoni-pizza-850x630-1-585x400-1.jpg" alt="Pepperoni">
-            <a href="menu.html">
-                <button class="card">
-                    Super Pepperoni
-                </button>
-            </a>
+            <div>
+                <a href="menu.html">
+                    <button class="card">
+                        Super Pepperoni
+                    </button>
+                </a>
+            </div>
         </div>
         <div>
             <img src="./Pizza Images/HAMANDTWOCHEESE.webp" alt="Ham and Cheese">
-            <a href="menu.html">
-                <button class="card">
-                    Dices of Ham
-                </button>
-            </a>
+            <div>
+                <a href="menu.html">    
+                    <button class="card">
+                        Dices of Ham
+                    </button>
+                </a>
+            </div>
         </div>
         <div>
             <img src="./Pizza Images/4-cheese-garlic-pizza.jpg" alt="Cheesy Garlic">
-            <a href="menu.html">
-                <button class="card">
-                    Cheesy Garlic
-                </button>
-            </a>
+            <div>
+                <a href="menu.html">
+                    <button class="card">
+                        Cheesy Garlic
+                    </button>
+                </a>
+            </div>
         </div>
     <!-- three column design end -->
     </section>
@@ -94,27 +84,33 @@
     <section class="three-column-menu">
         <div>
             <img src="./Pizza Images/Authentic-Neapolitan-Pizza-Dough-Recipe-45.jpg" alt="Neapolitan">
-            <a href="menu.html">
-                <button class="card">
-                    Neapolitan Margherita
-                </button>
-            </a>
+            <div>
+                <a href="menu.html">
+                    <button class="card">
+                        Neapolitan Margherita
+                    </button>
+                </a>
+            </div>
         </div>
         <div>
             <img src="./Pizza Images/Veggie-Pizza-2-of-5-e1691215701129 copy.png" alt="Veggie">
-            <a href="menu.html">
-                <button class="card">
-                    Veggie Goodness
-                </button>
-            </a>
+            <div>
+                <a href="menu.html">
+                    <button class="card">
+                        Veggie Goodness
+                    </button>
+                </a>
+            </div>
         </div>
         <div>
             <img src="./Pizza Images/images (10).jpeg" alt="Seafood">
-            <a href="menu.html">
-                <button class="card">
-                    Ocean of Seafood
-                </button>
-            </a>
+            <div>
+                <a href="menu.html">
+                    <button class="card">
+                        Ocean of Seafood
+                    </button>
+                </a>
+            </div>
         </div>
     <!-- three column design end -->
     </section>
@@ -122,48 +118,60 @@
     <section class="three-column-menu">
         <div>
             <img src="./Pizza Images/Supreme-Pizza-Simply-LaKita-5.jpg" alt="Supreme">
-            <a href="menu.html">
-                <button class="card">
-                    The Supreme
-                </button>
-            </a>
+            <div>
+                <a href="menu.html">
+                    <button class="card">
+                        The Supreme
+                    </button>
+                </a>
+            </div>
         </div>
     </section>
     <!-- three column design end -->
     <section class="heading-section">
         <h2 class="heading-text">
-            Pasta
+            ─ Pasta ─
         </h2>
     </section>
     <!-- three column design beginning -->
     <section class="three-column-menu">
         <div>
-            <img src="./Pizza Images/images (11).jpeg" alt="Pepperoni">
-            <a href="menu.html">
-                <button class="card">
-                    Spaghetti
-                </button>
-            </a>
+            <img src="./Pizza Images/images (11).jpeg" alt="Spaghetti">
+            <div>
+                <a href="menu.html">
+                    <button class="card">
+                        Spaghetti
+                    </button>
+                </a>
+            </div>
         </div>
         <div>
-            <img src="./Pizza Images/images (12).jpeg" alt="Ham and Cheese">
-            <a href="menu.html">
-                <button class="card">
-                    Macaroni
-                </button>
-            </a>
+            <img src="./Pizza Images/images (12).jpeg" alt="Macaroni">
+            <div>
+                <a href="menu.html">
+                    <button class="card">
+                        Macaroni
+                    </button>
+                </a>
+            </div>
         </div>
         <div>
-            <img src="./Pizza Images/images (13).jpeg" alt="Cheesy Garlic">
-            <a href="menu.html">
-                <button class="card">
-                    Fusilli
-                </button>
-            </a>
+            <img src="./Pizza Images/images (13).jpeg" alt="Fusilli">
+            <div>
+                <a href="menu.html">
+                    <button class="card">
+                        Fusilli
+                    </button>
+                </a>
+            </div>
         </div>
     <!-- three column design end -->
     </section>
 
+    <!-- filler -->
+    <section class="filler"></section>
+
+    <!-- sticky footer -->
     <footer>
         <a href="menu.html">
             <button class="card">
