--- a/stores.html
+++ b/stores.html
@@ -20,21 +20,6 @@
                 Menu
             </button>
         </a>
-        <a href="menu.html">
-            <button class="card">
-                Deals
-            </button>
-        </a>
-        <a href="menu.html">
-            <button class="card">
-                Allergen
-            </button>
-        </a>
-        <a href="menu.html">
-            <button class="card">
-                Blog
-            </button>
-        </a>
         <a href="stores.html">
             <button class="card">
                 Stores
@@ -45,12 +30,10 @@
                 About
             </button>
         </a>
-        <a href="menu.html">
-            <button class="card">
-                Account
-            </button>
-        </a>
     </header>
+
+    <!-- filler -->
+    <section class="filler"></section>
 
     <section class="hero-background-stores">
         <h1 class="hero-text-menu">
@@ -58,77 +41,147 @@
         </h1>
     </section>
     <section class="heading-section">
-        <h2 class="heading-text">
-            Pizza
-        </h2>
+        <h3 class="stores-note-text">Important note:</h3>
+        <h3 class="stores-note-text">
+            The following are areas in Christchurch that our pizza company will open shops in, please note this may change in the future and we'll keep you updated.
+        </h3>
     </section>
     <!-- three column design beginning -->
     <section class="three-column-menu">
         <div>
             <img src="./Pizza Images/pizza-shop-cartoon-icon-illustration-food-building-icon-concept-isolated-premium-flat-cartoon-style-vector.jpg">
-            <a href="menu.html">
-                <button class="card">
-                    Burnside
-                </button>
-            </a>
+            <div>
+                <a href="menu.html">
+                    <button class="card">
+                        Burnside
+                    </button>
+                </a>
+            </div>
         </div>
         <div>
             <img src="./Pizza Images/pizza-shop-cartoon-icon-illustration-food-building-icon-concept-isolated-premium-flat-cartoon-style-vector.jpg">
-            <a href="menu.html">
-                <button class="card">
-                    Bishopdale
-                </button>
-            </a>
+            <div>
+                <a href="menu.html">
+                    <button class="card">
+                        Bishopdale
+                    </button>
+                </a>
+            </div>
         </div>
         <div>
             <img src="./Pizza Images/pizza-shop-cartoon-icon-illustration-food-building-icon-concept-isolated-premium-flat-cartoon-style-vector.jpg">
-            <a href="menu.html">
-                <button class="card">
-                    Ilam
-                </button>
-            </a>
+            <div>   
+                <a href="menu.html">
+                    <button class="card">
+                        Avonhead
+                    </button>
+                </a>
+            </div>
         </div>
+    </section>
     <!-- three column design end -->
-    </section>
     <!-- three column design beginning -->
     <section class="three-column-menu">
         <div>
             <img src="./Pizza Images/pizza-shop-cartoon-icon-illustration-food-building-icon-concept-isolated-premium-flat-cartoon-style-vector.jpg">
-            <a href="menu.html">
-                <button class="card">
-                    Papanui
-                </button>
-            </a>
+            <div>   
+                <a href="menu.html">
+                    <button class="card">
+                        Ilam
+                    </button>
+                </a>
+            </div>
         </div>
         <div>
             <img src="./Pizza Images/pizza-shop-cartoon-icon-illustration-food-building-icon-concept-isolated-premium-flat-cartoon-style-vector.jpg">
-            <a href="menu.html">
-                <button class="card">
-                    Riccarton
-                </button>
-            </a>
+            <div>   
+                <a href="menu.html">
+                    <button class="card">
+                        St Albans
+                    </button>
+                </a>
+            </div>
         </div>
         <div>
             <img src="./Pizza Images/pizza-shop-cartoon-icon-illustration-food-building-icon-concept-isolated-premium-flat-cartoon-style-vector.jpg">
-            <a href="menu.html">
-                <button class="card">
-                    Fendalton
-                </button>
-            </a>
+            <div>   
+                <a href="menu.html">
+                    <button class="card">
+                        Papanui
+                    </button>
+                </a>
+            </div>
         </div>
+    </section>
     <!-- three column design end -->
-    </section>
     <!-- three column design beginning -->
     <section class="three-column-menu">
         <div>
             <img src="./Pizza Images/pizza-shop-cartoon-icon-illustration-food-building-icon-concept-isolated-premium-flat-cartoon-style-vector.jpg">
-            <a href="menu.html">
-                <button class="card">
-                    Christchurch City Centre
-                </button>
-            </a>
+            <div>   
+                <a href="menu.html">
+                    <button class="card">
+                        New Brighton
+                    </button>
+                </a>
+            </div>
+        </div>
+        <div>
+            <img src="./Pizza Images/pizza-shop-cartoon-icon-illustration-food-building-icon-concept-isolated-premium-flat-cartoon-style-vector.jpg">
+            <div>   
+                <a href="menu.html">
+                    <button class="card">
+                        Wigram
+                    </button>
+                </a>
+            </div>
+        </div>
+        <div>
+            <img src="./Pizza Images/pizza-shop-cartoon-icon-illustration-food-building-icon-concept-isolated-premium-flat-cartoon-style-vector.jpg">
+            <div>   
+                <a href="menu.html">
+                    <button class="card">
+                        Belfast
+                    </button>
+                </a>
+            </div>
         </div>
     </section>
+    <!-- three column design end -->
+    <!-- three column design beginning -->
+    <section class="three-column-menu">
+        <div>
+            <img src="./Pizza Images/pizza-shop-cartoon-icon-illustration-food-building-icon-concept-isolated-premium-flat-cartoon-style-vector.jpg">
+            <div>   
+                <a href="menu.html">
+                    <button class="card">
+                        Riccarton
+                    </button>
+                </a>
+            </div>
+        </div>
+        <div>
+            <img src="./Pizza Images/pizza-shop-cartoon-icon-illustration-food-building-icon-concept-isolated-premium-flat-cartoon-style-vector.jpg">
+            <div>   
+                <a href="menu.html">
+                    <button class="card">
+                        Fendalton
+                    </button>
+                </a>
+            </div>
+        </div>
+        <div>
+            <img src="./Pizza Images/pizza-shop-cartoon-icon-illustration-food-building-icon-concept-isolated-premium-flat-cartoon-style-vector.jpg">
+            <div>   
+                <a href="menu.html">
+                    <button class="card">
+                        Christchurch City Centre
+                    </button>
+                </a>
+            </div>
+        </div>
+    </section>
+    <!-- three column design end -->
 
     <footer>
         <a href="menu.html">
