Improved About Us, new Menu Items, and other minor changes

--- a/aboutus.html
+++ b/aboutus.html
@@ -33,13 +33,28 @@
     </header>
 
     <section class="heading-section">
-        <h1 class="aboutus-title">A Little About Us:</h1>
-        <div>
-           <p class="aboutus-text" class="aboutus-text-size">Hello, welcome to Messiano’s Pizzeria! We are striving to make the most high quality Italian style Pizzas in your local area! 
-Before our shop opened back in 2025, our team has been going around a trip in Italy for the past 5 years (except 2020 due to the COVID-19 pandemic), and we loved the delicious food they have prepared and their culture in general too! We strive to offer this experience inside our local area to give the authentic feel of Italian Pizzas! 
-Our team had been wanting to give customers the feel of traditional Italian Pizzas. Therefore, our Pizzas are cooked in a traditional pizza oven to give a smoky flavour to our pizzas, prepared by Italian chefs, and are made according to the Italian traditions and rules. We made sure to respect Italians by avoid cutting Pasta and omit directly putting overly non-traditional ingredients, including chicken and pineapple, onto our Italian main dishes. If you would like food such as those, we have offered side dishes for you to enjoy them to cater your preferences. 
-</p>
-        </div>
+        <h1 class="aboutus-title">─ A Little About Us ─</h1>
+    </section>
+    <section class="two-column">
+    <div class="image">
+        <img class="secondary-image" src="./Pizza Images/GettyImages-1380534040.webp" alt="Italy scenery">
+    </div>
+    <div>
+        <p class="aboutus-text">
+            Hello, welcome to Messiano’s Pizzeria! We are striving to make the most high quality Italian style Pizzas in your local area! 
+Our team has been going around a trip in Italy for the past 5 years (except 2020 due to the COVID-19 pandemic), and we loved the delicious food they have prepared and their culture in general too! We strive to offer this experience inside our local area to give the authentic feel of Italian Pizzas! 
+        </p>
+    </section>
+    <section class="two-column">
+    <div class="image">
+        <img class="secondary-image" src="./Pizza Images/CH_BAD_ROMAN_NYC_ROUND_1_020323952A.webp" alt="Italian greeting">
+    </div>
+    <div>
+        <p class="aboutus-text">
+            Our team had been wanting to give customers the feel of traditional Italian Pizzas. Therefore, our Pizzas are cooked in a traditional pizza oven to give a smoky flavour to our pizzas, prepared by Italian chefs, and are made according to the Italian traditions and rules. We made sure to respect Italians by avoid cutting Pasta and omit directly putting overly non-traditional ingredients, including chicken and pineapple, onto our Italian main dishes. If you would like food such as those, we have offered side dishes for you to enjoy them to cater your preferences. We look forward to seeing you in 2026!
+        </p>
+    </div>
+    </section>
     
     <footer>
         <a href="menu.html">
