--- a/menu.html
+++ b/menu.html
@@ -165,8 +165,106 @@
                 </a>
             </div>
         </div>
-    <!-- three column design end -->
     </section>
+    <!-- three column design end -->
+
+    <section class="heading-section">
+        <h2 class="heading-text">
+            ─ Sides ─
+        </h2>
+    </section>
+    <!-- three column design beginning -->
+    <section class="three-column-menu">
+        <div>
+            <img src="./Pizza Images/pine1_1024x1024@2x.webp" alt="Pineapple">
+            <div>
+                <a href="menu.html">
+                    <button class="card">
+                        Pineapple Dices
+                    </button>
+                </a>
+            </div>
+        </div>
+        <div>
+            <img src="./Pizza Images/IMG_0509-scaled.jpg" alt="Buffalo Wings">
+            <div>
+                <a href="menu.html">
+                    <button class="card">
+                        Buffalo Wings
+                    </button>
+                </a>
+            </div>
+        </div>
+        <div>
+            <img src="./Pizza Images/Crispy-Fries_8.webp" alt="French Fries">
+            <div>
+                <a href="menu.html">
+                    <button class="card">
+                        French Fries
+                    </button>
+                </a>
+            </div>
+        </div>
+    </section>
+    <!-- three column design end -->
+    <!-- three column design beginning -->
+    <section class="three-column-menu">
+        <div>
+            <img src="./Pizza Images/images (14).jpeg" alt="Onion Rings">
+            <div>
+                <a href="menu.html">
+                    <button class="card">
+                        Onion Rings
+                    </button>
+                </a>
+            </div>
+        </div>
+        <div>
+            <img src="./Pizza Images/Homemade-Mozzarella-Sticks-9.jpeg" alt="Mozzarella Sticks">
+            <div>
+                <a href="menu.html">
+                    <button class="card">
+                        Mozzarella Sticks
+                    </button>
+                </a>
+            </div>
+        </div>
+        <div>
+            <img src="./Pizza Images/Big-Italian-Salad-1200x1553.webp" alt="Salad">
+            <div>
+                <a href="menu.html">
+                    <button class="card">
+                        Salad
+                    </button>
+                </a>
+            </div>
+        </div>
+    </section>
+    <!-- three column design end -->
+    <!-- three column design beginning -->
+    <section class="three-column-menu">
+        <div>
+            <img src="./Pizza Images/easy-homemade-garlic-bread-fbig3.webp" alt="Garlic Bread">
+            <div>
+                <a href="menu.html">
+                    <button class="card">
+                        Garlic Bread
+                    </button>
+                </a>
+            </div>
+        </div>
+        <div>
+            <img src="./Pizza Images/bruschetta.jpg" alt="Bruschetta">
+            <div>
+                <a href="menu.html">
+                    <button class="card">
+                        Bruschetta
+                    </button>
+                </a>
+            </div>
+        </div>
+    </section>
+    <!-- three column design end -->
 
     <!-- filler -->
     <section class="filler"></section>
