--- a/stores.html
+++ b/stores.html
@@ -37,13 +37,13 @@
 
     <section class="hero-background-stores">
         <h1 class="hero-text-menu">
-            Stores
+            ──── Stores ────
         </h1>
     </section>
     <section class="heading-section">
         <h3 class="stores-note-text">Important note:</h3>
         <h3 class="stores-note-text">
-            The following are areas in Christchurch that our pizza company will open shops in, please note this may change in the future and we'll keep you updated.
+            The following are placeholders for areas in Christchurch that our pizza company would be expected to open shops in, please note this may change in the future and we'll keep you updated.
         </h3>
     </section>
     <!-- three column design beginning -->
