Finalising the aesthetics of the website

--- a/aboutus.html
+++ b/aboutus.html
@@ -9,26 +9,19 @@
     </span>
 </head>
 <body>
+    <!-- sticky header -->
     <header>
-        <a href="index.html">
-            <button class="card">
-                Home
-            </button>
+        <a href="index.html" class="my-button">
+            Home
         </a>
-        <a href="menu.html">
-            <button class="card">
-                Menu
-            </button>
+        <a href="menu.html" class="my-button">
+            Menu
         </a>
-        <a href="stores.html">
-            <button class="card">
-                Stores
-            </button>
+        <a href="stores.html" class="my-button">
+            Stores
         </a>
-        <a href="aboutus.html">
-            <button class="card">
-                About
-            </button>
+        <a href="aboutus.html" class="my-button">
+            About
         </a>
     </header>
 
@@ -42,7 +35,7 @@
     <div>
         <p class="aboutus-text">
             Hello, welcome to Messiano’s Pizzeria! We are striving to make the most high quality Italian style Pizzas in your local area! 
-Our team has been going around a trip in Italy for the past 5 years (except 2020 due to the COVID-19 pandemic), and we loved the delicious food they have prepared and their culture in general too! We strive to offer this experience inside our local area to give the authentic feel of Italian Pizzas! 
+Did you know, our team has been going around a trip in Italy for the past 5 years (except 2020 due to the COVID-19 pandemic)? And yes, we loved the delicious food they have prepared and their culture in general too! We strive to offer this experience inside our local area to give the authentic feel of Italian Pizzas! 
         </p>
     </section>
     <section class="two-column">
@@ -56,16 +49,13 @@ Our team has been going around a trip in Italy for the past 5 years (except 2020
     </div>
     </section>
     
+    <!-- sticky footer -->
     <footer>
-        <a href="menu.html">
-            <button class="card">
-                Help
-            </button>
+        <a href="help.html" class="my-button-red">
+            Help
         </a>
-        <a href="menu.html">
-            <button class="card">
-                Contact
-            </button>
+        <a href="contact.html" class="my-button-red">
+            Contact
         </a>
     </footer>
 </body>
