--- a/index.html
+++ b/index.html
@@ -11,31 +11,23 @@
 <body>
     <!-- sticky header -->
     <header>
-        <a href="index.html">
-            <button class="card">
-                Home
-            </button>
+        <a href="index.html" class="my-button">
+            Home
         </a>
-        <a href="menu.html">
-            <button class="card">
-                Menu
-            </button>
+        <a href="menu.html" class="my-button">
+            Menu
         </a>
-        <a href="stores.html">
-            <button class="card">
-                Stores
-            </button>
+        <a href="stores.html" class="my-button">
+            Stores
         </a>
-        <a href="aboutus.html">
-            <button class="card">
-                About
-            </button>
+        <a href="aboutus.html" class="my-button">
+            About
         </a>
     </header>
 
     <!-- filler -->
     <section class="filler"></section>
-    <section class="hero-image" alt="pizzeria kitchen">
+    <section class="hero-title-image" alt="pizzeria kitchen">
         <h1 class="hero-text">
             ──── Messiano's Pizzeria ────
         </h1>
@@ -47,8 +39,8 @@
         </div>
         <div class="info">
             <h1>Welcome to the Pizzeria</h1>
-            <p class="home-paragraph-size">Hello, welcome to Messiano’s Pizzeria! Here, you can find a range of Pizzas and various other Italian inspired dishes at our place! In this website, you can find what to expect in our pizza shops when we open in early 2026!  At that time, this website will turn into an actual pizza ordering website. 
-Please stay tuned and we would appreciate your feedback!</p>
+            <p class="home-paragraph-size">Hello, welcome to Messiano’s Pizzeria! Here, you can find a range of Pizzas and various other Italian inspired dishes at our place! In this website, you can find what to expect in our pizza shops when we open in early 2026!  At that time, this website will turn into an actual pizza ordering website.</p> 
+            <p>Please stay tuned and we would appreciate your feedback!</p>
         </div>
     </section>
     <!-- two column design ending -->
@@ -57,15 +49,11 @@ Please stay tuned and we would appreciate your feedback!</p>
 
     <!-- sticky footer -->
     <footer>
-        <a href="menu.html">
-            <button class="card">
-                Help
-            </button>
+        <a href="help.html" class="my-button-red">
+            Help
         </a>
-        <a href="menu.html">
-            <button class="card">
-                Contact
-            </button>
+        <a href="contact.html" class="my-button-red">
+            Contact
         </a>
     </footer>
 </body>
