--- a/menu.html
+++ b/menu.html
@@ -11,32 +11,24 @@
 <body>
     <!-- sticky header -->
     <header>
-        <a href="index.html">
-            <button class="card">
-                Home
-            </button>
+        <a href="index.html" class="my-button">
+            Home
         </a>
-        <a href="menu.html">
-            <button class="card">
-                Menu
-            </button>
+        <a href="menu.html" class="my-button">
+            Menu
         </a>
-        <a href="stores.html">
-            <button class="card">
-                Stores
-            </button>
+        <a href="stores.html" class="my-button">
+            Stores
         </a>
-        <a href="aboutus.html">
-            <button class="card">
-                About
-            </button>
+        <a href="aboutus.html" class="my-button">
+            About
         </a>
     </header>
 
     <!-- filler -->
     <section class="filler"></section>
 
-    <section class="hero-background">
+    <section class="hero-image">
         <h1 class="hero-text-menu">
             ──── Food Menu Showcase ────
         </h1>
@@ -271,15 +263,11 @@
 
     <!-- sticky footer -->
     <footer>
-        <a href="menu.html">
-            <button class="card">
-                Help
-            </button>
+        <a href="help.html" class="my-button-red">
+            Help
         </a>
-        <a href="menu.html">
-            <button class="card">
-                Contact
-            </button>
+        <a href="contact.html" class="my-button-red">
+            Contact
         </a>
     </footer>
 </body>
