--- a/stores.html
+++ b/stores.html
@@ -10,32 +10,24 @@
 </head>
 <body>
     <header>
-        <a href="index.html">
-            <button class="card">
-                Home
-            </button>
+        <a href="index.html" class="my-button">
+            Home
         </a>
-        <a href="menu.html">
-            <button class="card">
-                Menu
-            </button>
+        <a href="menu.html" class="my-button">
+            Menu
         </a>
-        <a href="stores.html">
-            <button class="card">
-                Stores
-            </button>
+        <a href="stores.html" class="my-button">
+            Stores
         </a>
-        <a href="aboutus.html">
-            <button class="card">
-                About
-            </button>
+        <a href="aboutus.html" class="my-button">
+            About
         </a>
     </header>
 
     <!-- filler -->
     <section class="filler"></section>
 
-    <section class="hero-background-stores">
+    <section class="hero-image">
         <h1 class="hero-text-menu">
             ──── Stores ────
         </h1>
@@ -183,17 +175,13 @@
     </section>
     <!-- three column design end -->
 
+    <!-- sticky footer -->
     <footer>
-        <a href="menu.html">
-            <button class="card">
-                Help
-            </button>
+        <a href="help.html" class="my-button-red">
+            Help
         </a>
-        <a href="menu.html">
-            <button class="card">
-                Contact
-            </button>
+        <a href="contact.html" class="my-button-red">
+            Contact
         </a>
     </footer>
-</body>
 </html>
