Changing the title text

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <span class="outlined-text">
-        <title>Messiano's Pizzeria - Title Page</title>
+        <title>Messiano's Pizzeria</title>
     </span>
 </head>
 <body>
