--- a/aboutus.html
+++ b/aboutus.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <span class="outlined-text">
-        <title>Messiano’s Pizzeria - Menu</title>
+        <title>Messiano’s Pizzeria - About Us</title>
     </span>
 </head>
 <body>
