Finished user support pages

--- a/contact.html
+++ b/contact.html
@@ -3,9 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Messiano's Pizzeria - Contact Page</title>
+    <link rel="stylesheet" href="style.css">
+    <span class="outlined-text">
+        <title>Messiano's Pizzeria - Contact Page</title>
+    </span>
 </head>
-<body>
-    <section>Contact Details</section>
+<body class="default-background">
+    <!-- sticky header -->
+    <header>
+        <a href="index.html" class="my-button">
+            Home
+        </a>
+        <a href="menu.html" class="my-button">
+            Menu
+        </a>
+        <a href="stores.html" class="my-button">
+            Stores
+        </a>
+        <a href="aboutus.html" class="my-button">
+            About
+        </a>
+    </header>
+
+    <section>
+        <h1>
+            Contact Details:
+        </h1>
+        <h3>
+            Email address: 23141@burnside.school.nz
+        </h3>
+        <h3>
+            (Note: Please do not send spam to the email address above, it is for business inquiries only. New contact details will be added in the future.)
+        </h3>
+    </section>
+
+    <!-- sticky footer -->
+    <footer>
+        <a href="help.html" class="my-button-red">
+            Help
+        </a>
+        <a href="contact.html" class="my-button-red">
+            Contact
+        </a>
+    </footer>
 </body>
 </html>
