--- a/help.html
+++ b/help.html
@@ -3,11 +3,80 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Messiano's Pizzeria - Help Centre</title>
+    <link rel="stylesheet" href="style.css">
+    <span class="outlined-text">
+        <title>Messiano's Pizzeria - Help Centre</title>
+    </span>
 </head>
-<body>
+<body class="default-background">
+    <!-- sticky header -->
+    <header>
+        <a href="index.html" class="my-button">
+            Home
+        </a>
+        <a href="menu.html" class="my-button">
+            Menu
+        </a>
+        <a href="stores.html" class="my-button">
+            Stores
+        </a>
+        <a href="aboutus.html" class="my-button">
+            About
+        </a>
+    </header>
+
     <section>
         <h1>Help Centre</h1>
     </section>
+    <section>
+        <div>
+            <h3>FAQ 1 - What does this website do?</h3>
+        </div>
+        <div>
+            <p>This website is currently designed to be an informational website for what to expect from Messiano's Pizzeria that will open in early 2026.</p>
+        </div>
+    </section>
+    <section>
+        <div>
+            <h3>FAQ 2 - What are the duplicated images for the "stores" page for?</h3>
+        </div>
+        <div>
+            <p>The placeholders will be replaced with the actual exterior of the real buildings that will be finished by the start of next year as we open our shops. Keep in mind they can change in the future.</p>
+        </div>
+    </section>
+    <section>
+        <div>
+            <h3>FAQ 3 - Why are some buttons not working?</h3>
+        </div>
+        <div>
+            <p>This website is still under construction, therefore not every feature will be available and may not represent the final product. Please be aware of changes and we will keep you on track.</p>
+        </div>
+    </section>
+    <section>
+        <div>
+            <h3>FAQ 4 - What should I do if things are not working properly?</h3>
+        </div>
+        <div>
+            <p>If you find any bugs or issues, please go to the contact page to contact us about any bugs or problems you have found. Please do not enter spam into our email address, it is for business purposes only.</p>
+        </div>
+    </section>
+    <section>
+        <div>
+            <h3>FAQ 5 - What should I do if I have another question?</h3>
+        </div>
+        <div>
+            <p>Not everything in this website is ready for use or have fully developed, therefore we do not have a search engine for finding other problems. Please keep an eye out for updates.</p>
+        </div>
+    </section>
+
+    <!-- sticky footer -->
+    <footer>
+        <a href="help.html" class="my-button-red">
+            Help
+        </a>
+        <a href="contact.html" class="my-button-red">
+            Contact
+        </a>
+    </footer>
 </body>
 </html>
